Excluded all files from rubo cop in objects_tdd since there is a guardfile within that directory

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,6 @@
 AllCops:
   Exclude:
-    - "Guardfile"
-    - "Gemfile"
-    - "homework_tester/**/*"
+    - 'Guardfile'
+    - 'Gemfile'
+    - 'homework_tester/**/*'
+    - 'objects_tdd/*'
